--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -748,6 +748,8 @@ Please note: requests devoid of the full name and date will be ignored.\n\n</str
     
     <string name="available_version">Available version</string>
     <string name="installed_version">Installed version</string>
-    
+    <string name="install_version">Install version</string>
+    <string name="installing_version">Installing version</string>
+    <string name="downloading_version">Downloadinig version</string>
     
 </resources>
